# toxee

./: .gitignore  .gitmodules  .metadata  CLAUDE.md  README.md  README.zh-CN.md  TODOS.md  analysis_options.yaml  build_all.sh  check_ios_env.sh  dart_test.yaml  l10n.yaml  pubspec.yaml  run_toxee.sh  run_toxee_android.sh  run_toxee_ios.sh  run_toxee_ios_device.sh
.github/workflows/: analyze.yml  auto_tests.yml  auto_tests_full.yml  auto_tests_nightly.yml  bootstrap_fresh.yml  build-packages.yml  e2e.yml  mcp_harness_smoke.yml  submodule_verify.yml
android/: build.gradle.kts
android/app/: build.gradle.kts
doc/: ACCOUNT_AND_SESSION.md  ARCHITECTURE.en.md  ARCHITECTURE.md  BUILD_AND_DEPLOY.en.md  BUILD_AND_DEPLOY.md  CALLING_AND_EXTENSIONS.en.md  CALLING_AND_EXTENSIONS.md  DEPENDENCY_BOOTSTRAP.md  DEPENDENCY_LAYOUT.md  GROUP_CHAT_GUIDE.en.md  GROUP_CHAT_GUIDE.md  HYBRID_ARCHITECTURE.en.md  HYBRID_ARCHITECTURE.md  IMPLEMENTATION_DETAILS.en.md  IMPLEMENTATION_DETAILS.md  INTEGRATION_GUIDE.en.md  INTEGRATION_GUIDE.md  PATCH_MAINTENANCE.md  PLATFORM_SUPPORT.en.md  PLATFORM_SUPPORT.md  README.en.md  README.md  TROUBLESHOOTING.en.md  TROUBLESHOOTING.md  getting-started.en.md  getting-started.md
doc/architecture/: ARCHITECTURE.en.md  ARCHITECTURE.md  E2E_TESTING.en.md  E2E_TESTING.md  HYBRID_ARCHITECTURE.en.md  HYBRID_ARCHITECTURE.md  MAINTAINER_ARCHITECTURE.en.md  MAINTAINER_ARCHITECTURE.md  MCP_UI_TEST_PLAYBOOK.en.md  TECH_REVIEW_AUDIT.md  TESTING_OVERVIEW.en.md  TESTING_OVERVIEW.md  UIKIT_PRIVATE_API.en.md  UI_TEST_LAYERING.en.md
doc/archive/: README.en.md  README.md  issue-fixed-chat-window.md  theme-audit-followup.md
doc/integration/: INTEGRATION_GUIDE.en.md  INTEGRATION_GUIDE.md
doc/operations/: BUILD_AND_DEPLOY.en.md  BUILD_AND_DEPLOY.md  DEPENDENCY_BOOTSTRAP.en.md  DEPENDENCY_BOOTSTRAP.md  DEPENDENCY_LAYOUT.en.md  DEPENDENCY_LAYOUT.md  PATCH_MAINTENANCE.en.md  PATCH_MAINTENANCE.md
doc/product/: index.html
doc/reference/: ACCOUNT_AND_SESSION.en.md  ACCOUNT_AND_SESSION.md  CALLING_AND_EXTENSIONS.en.md  CALLING_AND_EXTENSIONS.md  GROUP_CHAT_GUIDE.en.md  GROUP_CHAT_GUIDE.md  IMPLEMENTATION_DETAILS.en.md  IMPLEMENTATION_DETAILS.md  PLATFORM_SUPPORT.en.md  PLATFORM_SUPPORT.md
doc/reviews/: 2026-05-20-batch-1-findings.md  2026-05-20-batch-2-findings.md  2026-05-20-batch-3-findings.md  2026-05-20-batch-4-findings.md  2026-05-20-batch-5-findings.md  2026-05-20-batch-6-findings.md  2026-05-20-feature-inventory.md  2026-05-20-home-prefs-split-investigation.md  2026-05-20-impl-review-findings.md  2026-05-20-impl-review-status-check.md  2026-05-20-review-prompts.md  2026-05-20-round-2-findings.md  2026-05-26-core-feature-review.md
docs/audits/: 2026-05-16-ffi-reentrancy-audit.md
docs/designs/: local-storage-review-2026-05-18.md
docs/plans/: 2026-03-12-call-reliability-mobile-compatibility.md  2026-03-12-call-ui-redesign-implementation.md  2026-03-12-in-app-call-reliability-followup.md  2026-03-13-dependency-bootstrap-and-patch-workflow.md
integration_test/: README.md  app_smoke_test.dart  login_page_locale_test.dart  login_page_saved_account_test.dart  login_page_states_harness.dart  login_page_theme_test.dart  material_app_theme_listener_disposal_test.dart
ios/Runner/: AppDelegate.swift  CallAudioChannel.swift  Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/adapters/: bootstrap_adapter.dart  conversation_manager_adapter.dart  event_bus_adapter.dart  logger_adapter.dart  shared_prefs_adapter.dart
lib/auth/: login_use_case.dart
lib/bootstrap/: app_bootstrap.dart  app_bootstrap_result.dart  app_runtime_bootstrap.dart  desktop_shell_bootstrap.dart  logging_bootstrap.dart  prefs_bootstrap.dart
lib/call/: audio_handler.dart  call_audio_platform.dart  call_avatar_controller.dart  call_codec_profile.dart  call_effects_listener.dart  call_floating_widget.dart  call_media_capabilities.dart  call_overlay.dart  call_overlay_manager.dart  call_quality_estimator.dart  call_service_manager.dart  call_state_notifier.dart  call_ui_components.dart  call_ui_notice.dart  call_ui_shell.dart  call_video_transform.dart  in_call_manager.dart  in_call_view.dart  video_handler.dart  (+5 more)
linux/: CMakeLists.txt  toxee.desktop
test/: account_password_lifecycle_test.dart  account_reconciliation_test.dart  account_scoped_prefs_persistence_test.dart  account_short_toxid_backfill_test.dart  account_switch_resets_global_prefs_test.dart  account_toggle_persistence_test.dart  android_call_audio_channel_source_test.dart  android_call_manifest_test.dart  app_paths_unification_test.dart  call_and_history_regression_test.dart  call_audio_platform_test.dart  call_avatar_controller_test.dart  call_bridge_bitrate_test.dart  call_bridge_service_test.dart  call_codec_profile_test.dart  call_effects_policy_test.dart  call_floating_widget_test.dart  call_in_call_view_test.dart  call_media_helpers_test.dart  call_ring_screens_test.dart  call_toxav_ffi_safety_test.dart  call_ui_shell_test.dart  call_video_handler_lifecycle_test.dart  default_avatar_installer_test.dart  fake_conversation_list_builder_test.dart  fake_conversation_manager_delete_test.dart  fake_conversation_manager_pinned_test.dart  fake_im_pending_friend_adds_test.dart  ffi_chat_service_c2c_custom_ingest_test.dart  ffi_chat_service_group_dedup_test.dart  first_run_wizard_test.dart  friend_asset_cleanup_test.dart  ios_call_audio_channel_source_test.dart  l3_seed_marker_test.dart  locale_mode_persistence_test.dart  message_header_actions_test.dart  message_history_backup_cleanup_test.dart  message_history_persistence_no_history_dir_warning_test.dart  message_history_persistence_perf_test.dart  prefs_cross_platform_polish_test.dart  (+15 more)
tool/: .complexity_baseline.txt  bootstrap_deps.dart  check_complexity.dart  refresh_sdk_patch.sh  test_bootstrap_smoke.sh  test_ci_packaging.sh  verify_bootstrap_local.sh  verify_submodule_remote.sh
tool/ci/linux-installer/: CMakeLists.txt  toxee-wrapper.in
tool/ci/windows-installer/: CMakeLists.txt
tool/mcp_test/echo_peer_src/: CMakeLists.txt  echo_peer.cpp
windows/: CMakeLists.txt
(+660 files in other folders)
