cmake_minimum_required(VERSION 3.16)
project(toxee_windows_installer LANGUAGES NONE)

if(NOT DEFINED TOXEE_INSTALLER_SOURCE_DIR OR TOXEE_INSTALLER_SOURCE_DIR STREQUAL "")
  message(FATAL_ERROR "TOXEE_INSTALLER_SOURCE_DIR is required")
endif()

if(NOT EXISTS "${TOXEE_INSTALLER_SOURCE_DIR}")
  message(FATAL_ERROR "Installer source dir does not exist: ${TOXEE_INSTALLER_SOURCE_DIR}")
endif()

set(TOXEE_INSTALLER_VERSION "0.0.0")
if(DEFINED TOXEE_RELEASE_VERSION AND NOT TOXEE_RELEASE_VERSION STREQUAL "")
  set(TOXEE_INSTALLER_VERSION "${TOXEE_RELEASE_VERSION}")
endif()

set(_TOXEE_PACKAGE_ARCH "AMD64")
if(DEFINED TOXEE_PACKAGE_ARCH AND NOT TOXEE_PACKAGE_ARCH STREQUAL "")
  set(_TOXEE_PACKAGE_ARCH "${TOXEE_PACKAGE_ARCH}")
endif()

set(CPACK_PACKAGE_NAME "Toxee")
set(CPACK_PACKAGE_VENDOR "Toxee Contributors")
set(CPACK_PACKAGE_CONTACT "maintainers@toxee.local")
set(CPACK_PACKAGE_VERSION "${TOXEE_INSTALLER_VERSION}")
set(CPACK_PACKAGE_INSTALL_DIRECTORY "Toxee")
set(CPACK_PACKAGE_EXECUTABLES "toxee;Toxee")
set(CPACK_PACKAGE_FILE_NAME "toxee-${TOXEE_INSTALLER_VERSION}-Windows-${_TOXEE_PACKAGE_ARCH}")
set(CPACK_GENERATOR "WIX")
set(CPACK_WIX_UPGRADE_GUID "86C991D2-E546-4B0C-9F0F-6BFE4AD6B4A7")
set(CPACK_WIX_PRODUCT_ICON "${CMAKE_CURRENT_LIST_DIR}/../../../windows/runner/resources/app_icon.ico")
set(CPACK_COMPONENTS_ALL Runtime)

file(READ "${CMAKE_CURRENT_LIST_DIR}/../../../LICENSE" TOXEE_LICENSE_TEXT)
set(TOXEE_LICENSE_TXT "${CMAKE_CURRENT_BINARY_DIR}/LICENSE.txt")
file(WRITE "${TOXEE_LICENSE_TXT}" "${TOXEE_LICENSE_TEXT}")
set(CPACK_RESOURCE_FILE_LICENSE "${TOXEE_LICENSE_TXT}")

install(
  DIRECTORY "${TOXEE_INSTALLER_SOURCE_DIR}/"
  DESTINATION "."
  COMPONENT Runtime
  USE_SOURCE_PERMISSIONS
)

include(CPack)
